add createdBy and fix bug

--- a/public/index.html
+++ b/public/index.html
@@ -48,10 +48,8 @@
                                     <option value="PUT">Put</option>
                                     <option value="DELETE">Delete</option>
                                 </select>
-                                <input type="text" name="apiUrl" class="w-full p-2 border rounded"
-                                       placeholder="Endpoint" required
-                                       pattern="^(https?:\/\/)?([a-zA-Z0-9-]+\.)+[a-zA-Z]{2,}([/?#][^\s]*)?$"
-                                       title="Please enter a valid URL (e.g., http://example.com/api/test)">
+                                <input type="url" name="apiUrl" class="w-full p-2 border rounded"
+                                       placeholder="Endpoint" required>
                             </div>
                         </div>
 
