--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
                                     <option value="DELETE">Delete</option>
                                 </select>
                                 <input type="url" name="apiUrl" class="w-full p-2 border rounded"
-                                       placeholder="Endpoint" required>
+                                       placeholder="API Endpoint" required>
                             </div>
                         </div>
 
